--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
 			<div class="col-6">
 				<ul>
 					<li>
-						<a href="https://www.pornhub.com/view_video.php?viewkey=ph5e23914437956">Lexy Luna</a>
+						<a href="https://www.pornhub.com/view_video.php?viewkey=ph5e23914437956" target="_blank">Lexy Luna</a>
 					</li>
 					<li>
-						<a href="https://www.pornhub.com/view_video.php?viewkey=ph5b79c3ab21beb">see</a>
+						<a href="https://www.pornhub.com/view_video.php?viewkey=ph5b79c3ab21beb" target="_blank">see</a>
 					</li>
 					<li>
-						<a href="https://www.pornhub.com/view_video.php?viewkey=ph572c0efa5cab5">see</a>
+						<a href="https://www.pornhub.com/view_video.php?viewkey=ph572c0efa5cab5" target="_blank">see</a>
 					</li>
 					<li>
-						<a href="https://www.pornhub.com/view_video.php?viewkey=ph5e63ed78c643e">see</a>
+						<a href="https://www.pornhub.com/view_video.php?viewkey=ph5e63ed78c643e" target="_blank">see</a>
 					</li>
 					<li>
-						<a href="https://www.pornhub.com/view_video.php?viewkey=ph5d6039f398181">see</a>
+						<a href="https://www.pornhub.com/view_video.php?viewkey=ph5d6039f398181" target="_blank">see</a>
 					</li>
 					<li>
-						<a href="https://www.pornhub.com/view_video.php?viewkey=ph5a0da89ae4f75">see</a>
+						<a href="https://www.pornhub.com/view_video.php?viewkey=ph5a0da89ae4f75" target="_blank">see</a>
 					</li>
 				</ul>
 			</div>
